--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <label>Enter URL:</label>
-    <input type="text" id="input-el" placeholder="https://scrimba.com">
+    <input type="text" id="input-el" placeholder="https://youtube.com">
     <button id="input-btn">SAVE INPUT</button>
     <button id="delete-btn">DELETE ALL</button>
     <ul id="ul-el"></ul>
